[package]
name = "crypto_api_blake2b"
edition = "2018"
version = "0.1.0"
authors = ["Keziah Biermann <development@kizzycode.de>"]
description = "Implements Blake2b for `crypto_api`"
keywords = ["Crypto", "Blake2b", "Hash", "MAC", "KDF"]
license = "BSD-2-Clause OR MIT"
repository = "https://github.com/KizzyCode/crypto_api_blake2"
readme = "README.md"


[dependencies]
crypto_api = "0.1.14"


[profile.release]
overflow-checks = true

[profile.bench]
overflow-checks = true